--- a/home.html
+++ b/home.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>KK || Kevin Kalimba</title>
+    <link rel="stylesheet" href="style.css">
+    <script src=""></script>
+    <link href="kkkkk.jpg" rel="icon">
+    <script src="https://kit.fontawesome.com/062c7bf1ed.js" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
 </head>
 <body>
-    
+  <nav class="navbar">
+      <div class="">
+          <img src="kkkkk.jpg" >
+      </div>
+    <ul>
+     <li><a href="#"> <span> 01. </span> Home</a></li>
+     <li><a href="#"> <span> 02. </span> About</a></li>
+    <li><a href="#"> <span> 03. </span> Contact</a></li>
+    <li><a href="#"> <span> 04. </span> Login</a></li>
+    <li><a href="#"> <span> 05. </span> Blogs</a></li>
+    </ul>
+  </nav>
+  <section id="home">
+       <div class="main">
+           <h1>Hi, my name is  </h1>
+           <h2>KEVIN KALIMBA</h2>
+           <h3> RWANDAN Web Developer
+           </h3>
+<button class="btn">
+    RESUME
+</button><div class="social-links">
+    <a href="https://twitter.com/kevin_kalimba" target="_blank" rel="noreferrer" ><i class="icofont-twitter"></i></a>
+    <a href="https://www.facebook.com/kevin.kalimba.9/" target="_blank" rel="noreferrer"><i class="icofont-facebook"></i></a>
+    <a href="https://www.instagram.com/kales250/" target="_blank" rel="noreferrer" ><i class="icofont-instagram"></i></a>
+    <a href="https://www.linkedin.com/in/kevin-kalimba-61b3b7224/" target="_blank" rel="noreferrer" ><i class="icofont-linkedin"></i></a>
+    <a href="mailto:kevin.kalimba54@gmail.com" target="_blank" rel="noreferrer"><i class="far fa-envelope"></i></a>
+    <a href="https://github.com/Kalimbak" target="_blank" rel="noreferrer"><i class="fab fa-github"></i></a>
+  </div>
+       </div>
+  </section>
 </body>
 </html>
