--- a/home.html
+++ b/home.html
@@ -7,14 +7,14 @@
     <title>KK || Kevin Kalimba</title>
     <link rel="stylesheet" href="style.css">
     <script src=""></script>
-    <link href="kkkkk.jpg" rel="icon">
+    <link href="pics/kkkkk.jpg" rel="icon">
     <script src="https://kit.fontawesome.com/062c7bf1ed.js" crossorigin="anonymous"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
 </head>
 <body>
   <nav class="navbar">
       <div class="">
-          <img src="kkkkk.jpg" >
+          <img src="pics/kkkkk.jpg" >
       </div>
     <ul>
      <li><a href="#"> <span> 01. </span> Home</a></li>
@@ -32,15 +32,18 @@
            </h3>
 <button class="btn">
     RESUME
-</button><div class="social-links">
-    <a href="https://twitter.com/kevin_kalimba" target="_blank" rel="noreferrer" ><i class="icofont-twitter"></i></a>
-    <a href="https://www.facebook.com/kevin.kalimba.9/" target="_blank" rel="noreferrer"><i class="icofont-facebook"></i></a>
-    <a href="https://www.instagram.com/kales250/" target="_blank" rel="noreferrer" ><i class="icofont-instagram"></i></a>
-    <a href="https://www.linkedin.com/in/kevin-kalimba-61b3b7224/" target="_blank" rel="noreferrer" ><i class="icofont-linkedin"></i></a>
-    <a href="mailto:kevin.kalimba54@gmail.com" target="_blank" rel="noreferrer"><i class="far fa-envelope"></i></a>
-    <a href="https://github.com/Kalimbak" target="_blank" rel="noreferrer"><i class="fab fa-github"></i></a>
-  </div>
+</button>
        </div>
   </section>
+  <div class="footer">
+    <p> kevin.kalimba54@gmail.com</p>
+    <div class="icon-bar">
+        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
+        <a href="#" class="google"><i class="fa fa-google"></i></a>
+        <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+      </div>
+  </div>
 </body>
+
 </html>
