--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
 </head>
 <body>
+    <header>
   <nav class="navbar">
       <div class="">
           <img src="pics/kkkkk.jpg" >
@@ -20,10 +21,11 @@
      <li><a href="#"> <span> 01. </span> Home</a></li>
      <li><a href="#"> <span> 02. </span> About</a></li>
     <li><a href="#"> <span> 03. </span> Contact</a></li>
-    <li><a href="#"> <span> 04. </span> Login</a></li>
+    <li><a href="Login.html"> <span> 04. </span> Login</a></li>
     <li><a href="#"> <span> 05. </span> Blogs</a></li>
     </ul>
   </nav>
+</header>
   <section id="home">
     
 
@@ -40,7 +42,7 @@
            <img src="pics/about.jpg" ></div>
   </section>
   <section class="about">
-      
+
   </section>
 </body>
 <div class="footer">
